# colourlog

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
colourlog/: __main__.py
colourlog/adapters/activitywatch/: http_client.py
colourlog/adapters/clock/: system.py
colourlog/adapters/event_bus/: in_memory.py
colourlog/adapters/override/: in_memory.py
colourlog/adapters/persistence/sqlite/: client_repository.py  engine.py  entry_event_repository.py  mode_repository.py  project_repository.py  task_repository.py
colourlog/application/: exceptions.py
colourlog/application/ports/: activitywatch.py  clock.py  event_bus.py  override.py  repositories.py
colourlog/application/usecases/: background_ticker.py  crud_client.py  crud_project.py  crud_task.py  current_task.py  list_entries.py  mode.py  resolve_auto_switch.py  start_entry.py  stop_entry.py
colourlog/composition/: container.py  fastapi_app.py  logging_config.py
colourlog/domain/: entities.py  exceptions.py  value_objects.py
colourlog/interface/http/: dependencies.py  errors.py  schemas.py
colourlog/interface/http/routers/: clients.py  entries.py  events.py  health.py  mode.py  projects.py  tasks.py
colourlog/interface/sse/: stream.py
colourlog/interface/tray/: __main__.py  app.py  client.py  state.py
packaging/systemd/: colourlog-tray.service
tests/: test_smoke.py
tests/adapters/activitywatch/: test_http_client.py
tests/adapters/clock/: test_system.py
tests/adapters/event_bus/: test_in_memory.py
tests/adapters/override/: test_in_memory.py
tests/adapters/persistence/sqlite/: conftest.py  test_client_repository.py  test_entry_event_repository.py  test_mode_repository.py  test_project_repository.py  test_task_repository.py
tests/application/: fakes.py  test_background_ticker.py  test_crud_client.py  test_crud_project.py  test_crud_task.py  test_current_task.py  test_list_entries.py  test_mode.py  test_resolve_auto_switch.py  test_start_entry.py  test_stop_entry.py
tests/composition/: test_container.py  test_lifespan.py  test_logging_config.py
tests/domain/: test_entities.py  test_entry_event.py  test_entry_projection.py
tests/functional/: conftest.py  test_workflow.py
tests/interface/http/: conftest.py  test_clients.py  test_entries.py  test_events.py  test_health.py  test_mode.py  test_projects.py  test_tasks.py
tests/interface/sse/: test_stream.py
tests/interface/tray/: test_client.py  test_state.py
