[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "colourlog"
version = "0.0.0"
description = "Personal, self-hosted, GNOME-native time tracker. Consumes ActivityWatch; exports detailed.csv for the timesheet pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Stanislas Sodonon", email = "stanislas.sodonon@gmail.com" }]
keywords = ["time-tracking", "activitywatch", "gnome"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "import-linter>=2.1",
  "commitizen>=3.29",
  "pre-commit>=3.8",
]

[project.urls]
Repository = "https://github.com/bidossessi/colourlog"

[tool.hatch.build.targets.wheel]
packages = ["colourlog"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["colourlog", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "TCH",
  "RUF",
  "ANN",
  "S",
  "PT",
]
ignore = [
  "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unreachable = true
disallow_any_unimported = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
junit_family = "legacy"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=colourlog",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-branch",
  "--junitxml=junit.xml",
]

[tool.coverage.run]
source = ["colourlog"]
branch = true
omit = [
  "*/application/ports/*",
  "*/colourlog/application/ports/*",
  "*/colourlog/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.importlinter]
root_packages = ["colourlog"]

[[tool.importlinter.contracts]]
name = "Clean Architecture layer dependencies"
type = "layers"
layers = [
  "colourlog.composition",
  "colourlog.interface",
  "colourlog.adapters",
  "colourlog.application",
  "colourlog.domain",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.0.0"
version_scheme = "semver"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
major_version_zero = true
